--- a/bookstore-backend/Gemfile
+++ b/bookstore-backend/Gemfile
@@ -13,7 +13,7 @@ gem 'puma', '~> 3.11'
 # gem 'jbuilder', '~> 2.5'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
-
+gem 'money-rails', '~>1'
 # Use ActiveStorage variant
 # gem 'mini_magick', '~> 4.8'
 
